--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -30,9 +30,9 @@ header.header
                 +svg('logo').header-logo__svg
             
         .header__right
-            .menu-langs
-                a(href='/ua').main-bottom__langs-switch UA
-                a(href='/ru').main-bottom__langs-switch.active EN
+            //- .menu-langs
+            //-     a(href='/ua').main-bottom__langs-switch UA
+            //-     a(href='/ru').main-bottom__langs-switch.active EN
             .standard-btn.header-btn
                 a(href="#").btn-link Співпрацювати
 
