--- a/src/pug/includes/homepage/intro.pug
+++ b/src/pug/includes/homepage/intro.pug
@@ -1,9 +1,9 @@
 section.intro
     .intro-container.container
-        .intro-inner__text-wrap 
-            <canvas id="bubble"></canvas> 
+        .intro-inner__img-wrap
+            img(src="assets/images/hero.jpg", alt="") 
         .intro-inner__text
-            h1.intro-inner__text-title(data-animated-title) Термопакувальник <br> "Альфа"
+            h1.intro-inner__text-title(data-animated-title) Термопакувальник
             p.intro-inner__text-description «Відкрийте новий рівень упаковки з нашим Термопакувальником "Альфа". Забезпечте ефективність та точність упаковки за допомогою передових технологій.»
             //- .intro-down 
             //-     a(href="#")
