--- a/src/pug/includes/homepage/numbers.pug
+++ b/src/pug/includes/homepage/numbers.pug
@@ -1,25 +1,24 @@
 section.numbers 
     .numbers-container.container 
         .numbers-row 
-            .numbers-card.numbers-card--large 
+            .numbers-card
                 h4.numbers-card__title(data-animated-title) опис
                 p.numbers-card__descr Відкрийте новий рівень упаковки з нашим Термопакувальником "Альфа". Забезпечте ефективність та точність упаковки за допомогою передових технологій.
-            .numbers-card--colored__container
-                .numbers-card.numbers-card--large.numbers-card--colored
-                    h4.numbers-card__title(data-animated-title) ТП-41470768
-                    p.numbers-card__descr Тип приладу
-                .numbers-card.numbers-card--small.numbers-card--colored
-                    h4.numbers-card__title(data-animated-title) Альфа
-                    p.numbers-card__descr Модель приладу
-        .numbers-row 
-            .numbers-card--colored__container 
-                .numbers-card.numbers-card--large.numbers-card--colored
-                    h4.numbers-card__title(data-animated-title) 40x33x23 см
-                    p.numbers-card__descr Компактні розміри
-                .numbers-card.numbers-card--small.numbers-card--colored
-                    h4.numbers-card__title(data-animated-title) 220В <br> 50Гц <br> 200Вт
-                    p.numbers-card__descr Потужність
-            .numbers-card.numbers-card--large.numbers-card--large-text 
+            .numbers-card.numbers-card--colored
+                h4.numbers-card__title(data-animated-title) ТП-41470768
+                p.numbers-card__descr Тип приладу
+                img(src="assets/images/blobs3.png", alt="").numbers-img--first
+            .numbers-card
+                h4.numbers-card__title(data-animated-title) Альфа
+                p.numbers-card__descr Модель приладу
+            .numbers-card.numbers-card--colored
+                h4.numbers-card__title(data-animated-title) 40x33x23 см
+                p.numbers-card__descr Компактні розміри
+                img(src="assets/images/blobs4.png", alt="").numbers-img--middle
+            .numbers-card.numbers-card--large-text 
                 p.numbers-card__descr Термопакувальник "Альфа" - ідеальне поєднання стилю та ефективності. Захищає ваші улюблені продукти, зберігаючи їхню свіжість та привабливий вигляд. Його екологічність робить його вибором, який дбає про навколишнє середовище, даруючи при цьому комфорт та стиль вашим покупкам.
                 a(href="#").numbers-btn Співпрацювати
-                img(src="assets/images/blobs1.png", alt="").numbers-img   
+            .numbers-card.numbers-card--colored
+                h4.numbers-card__title(data-animated-title) 220В <br> 50Гц <br> 200Вт
+                p.numbers-card__descr Потужність
+                img(src="assets/images/blobs5.png", alt="").numbers-img--last
