--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -4,12 +4,14 @@
   left: 0;
   height: var(--header-h-top);
   width: 100%;
-  background-color: $wc;
   z-index: 100;
-  border-bottom: 1px solid transparent;
   transition: all 0.3s ease-in-out;
+  padding: 10px 20px;
 
   &-inner {
+    background: $mc1;
+    border-radius: 20px;
+    padding: 10px 20px;
     max-width: 100%;
     height: 100%;
     display: flex;
@@ -22,8 +24,8 @@
     a {
       width: 251px;
       height: 64px;
-      background-color: #86c8bc;
-      border: 1px solid transparent;
+      background-color: transparent;
+      border: 1px solid #fff;
       border-radius: 20px;
       display: flex;
       justify-content: center;
@@ -53,7 +55,6 @@
       }
 
       &:hover {
-        background-color: $wc;
         border: 1px solid #86c8bc;
       }
     }
@@ -106,21 +107,23 @@
     @include mobile {
       order: 1;
       width: fit-content;
+
     }
   }
 
   &-logo__svg {
     height: 110px;
-    width: 121px;
+    
     transition: all 0.3s ease-in-out;
     @include tabletLarge {
       height: 90px;
-      width: 99px;
+     
     }
 
     @include mobile {
       height: 60px;
-      width: 66px;
+      width: 80px;
+      
     }
   }
 
@@ -241,20 +244,19 @@
 .header.bg-header,
 .header.on {
   height: var(--header-h);
-  border-bottom: 2px solid #0c1e34;
 
   .header__link > .header-logo__svg {
     height: 80px;
-    width: 88px;
+   
     @include tabletLarge {
       height: 70px;
-      width: 77px;
+     
     }
     @include tablet {
       height: 60px;
     }
     @include mobile {
-      width: 66px;
+      width: 80px;
     }
   }
 
@@ -506,7 +508,7 @@
 #toggle-menu span:before {
   width: 22px;
   height: 2px;
-  background-color: $mc1;
+  background-color: #fff;
   transition: all 0.3s;
   backface-visibility: hidden;
   border-radius: 2px;
@@ -520,8 +522,8 @@
 #toggle-menu > div {
   height: 64px;
   width: 64px;
-  background-color: #86c8bc;
-  border: 1px solid transparent;
+  background-color: transparent;
+  border: 1px solid #fff;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -547,9 +549,9 @@
 #toggle-menu > div > span {
   position: relative;
   display: block;
-  background-color: $mc1;
+  background-color: #fff;
   @include mobile {
-    background-color: $mc1;
+    background-color: #fff;
   }
 }
 
