--- a/src/assets/styles/pages/documents.scss
+++ b/src/assets/styles/pages/documents.scss
@@ -1,17 +1,6 @@
 .documents {
-    padding-top: 210px;
-
-    @include tabletLarge {
-        padding-top: 150px;
-    }
-
-    @include tablet {
-        padding-top: 40px;
-    }
-
-    @include mobile {
-        padding-top: 50px;
-    }
+    padding-top: 50px;
+    padding-bottom: 100px;
 
     &-container {
 
@@ -67,8 +56,8 @@
     }
 
     &-card {
-        width: 32%;
-        border: 2px solid $grey;
+        width: calc(50% - 5px);
+        background: $mc1;
         border-radius: 20px;
         padding: 50px;
         text-decoration: none;
@@ -85,12 +74,6 @@
             margin-bottom: 15px;
         }
 
-
-        &:last-child {
-            @include mobile {
-                margin-bottom: 0;
-            }
-        }
 
         &:hover {
             box-shadow: rgba(100, 100, 111, 0.1) 0px 10px 10px 0px;
@@ -119,7 +102,7 @@
         font-weight: 400;
         font-size: 32px;
         line-height: 130%;
-        color: $mc1;
+        color: #fff;
         width: 70%;
 
         @include tabletLarge {
@@ -136,7 +119,7 @@
     &-card__svg {
         width: 34px;
         height: 34px;
-        border-bottom: 1px solid $mc;
+        border-bottom: 1px solid #fff;
 
         @include tabletLarge {
             height: 20px;
@@ -155,6 +138,7 @@
             width: 34px;
             height: 34px;
             transform: rotate(270deg);
+            stroke: #fff;
 
             @include tabletLarge {
                 height: 20px;
@@ -169,7 +153,7 @@
         font-weight: 400;
         font-size: 18px;
         line-height: 150%;
-        color: #36383F;
+        color: #fff;
 
         @include tabletLarge {
             font-size: 16px;
