--- a/src/pug/includes/footer.pug
+++ b/src/pug/includes/footer.pug
@@ -4,7 +4,7 @@ footer.footer
       .footer-bottom-block
         .footer-right 
           .footer-email 
-            a(href="mailto:hello@hatynka.com") hello@hatynka.com
+            a(href="mailto:hello@hatynka.com") hello@ekotm.com
           .footer-phone 
             a(href="tel:+380971234567") + 38 097 123 45 67
           .footer-social
@@ -17,19 +17,15 @@ footer.footer
             a(href='fb').footer-social-link.social-telegram
               +svg('telegram')
         .footer-links 
-          a(href="#") Інфографіка
-          a(href="/#location") Про фонд
-          a(href="/#development-video") Про Хатинку
-          a(href="/#details-main") Галерея
-          a(href="/#news-home") Долучитись
-          a(href="/#development-video") Новини
-          a(href="/#details-main") Документи
+          a(href="#") Головна
+          a(href="/#location") Про продукт
+          a(href="/#development-video") Інновації
+          a(href="/#details-main") Опис
           a(href="/#news-home") FAQ
+          a(href="/#details-main") Документи
         .footer-up 
           a(href="#")
             +svg ('arrow-top')
       .footer-bottom-additional
-        p.footer-copy ©2022 “HATYNKA FOUNDATION”
+        p.footer-copy ©2023 “EKO TM”
         .footer-dev
-          a(href="https://smarto.agency/" rel="nofollow" target="_blank").footer-dev__link
-            +svg ('logo_smart_orange')
