--- a/src/pug/includes/footer.pug
+++ b/src/pug/includes/footer.pug
@@ -4,9 +4,9 @@ footer.footer
       .footer-bottom-block
         .footer-right 
           .footer-email 
-            a(href="mailto:hello@hatynka.com") hello@ekotm.com
+            a(href="mailto:ecotm3757@gmail.com") ecotm3757@gmail.com
           .footer-phone 
-            a(href="tel:+380971234567") + 38 097 123 45 67
+            a(href="tel:+380671643757") +38(067)164-37-57
           .footer-social
             a(href='fb').footer-social-link.social-fb
               +svg('fb')
@@ -18,14 +18,15 @@ footer.footer
               +svg('telegram')
         .footer-links 
           a(href="#") Головна
-          a(href="/#location") Про продукт
-          a(href="/#development-video") Інновації
-          a(href="/#details-main") Опис
-          a(href="/#news-home") FAQ
-          a(href="/#details-main") Документи
+          a(href="/#about") Про продукт
+          a(href="/#about") Інновації
+          a(href="/#numbers") Опис
+          a(href="/#guestions") FAQ
+          a(href="/#documents") Документи
+          a(href="/#development-video") Відео
         .footer-up 
           a(href="#")
             +svg ('arrow-top')
       .footer-bottom-additional
-        p.footer-copy ©2023 “EKO TM”
+        p.footer-copy ©2023 “EKO TM”, м.Київ, пр.П.Григоренка 1а, оф.154
         .footer-dev
