--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -10,21 +10,17 @@ header.header
                 #menu.container
                     ul.menu-list 
                         li.menu-item 
-                            a(href="index.html").menu-link Інфографіка
+                            a(href="index.html").menu-link Головна
                         li.menu-item
-                            a(href="/#location").menu-link Про фонд
+                            a(href="/#location").menu-link Про продукт
                         li.menu-item
-                            a(href="#home").menu-link Про Хатинку
+                            a(href="#home").menu-link Інновації
                         li.menu-item 
-                            a(href="#home").menu-link Галерея
+                            a(href="#home").menu-link Опис
                         li.menu-item
-                            a(href="/#details-main").menu-link Долучитись
-                        li.menu-item 
-                            a(href="construction.html").menu-link Новини
+                            a(href="/#details-main").menu-link FAQ
                         li.menu-item 
                             a(href="/#conditions").menu-link Документи
-                        li.menu-item
-                            a(href="news.html").menu-link FAQ
         .header__center 
             a(href='index.html').header__link
                 +svg('logo').header-logo__svg
