--- a/src/pug/includes/homepage/questions.pug
+++ b/src/pug/includes/homepage/questions.pug
@@ -7,7 +7,7 @@ section.questions
             .questions-card 
                 button.questions-card__title Хто ми такі?
                 .questions-card__descr-container
-                    p.questions-card__descr Термопакувальник - це пристрій, який використовує теплову енергію для упаковки матеріалів чи продуктів. В основному, це використовується для формування, запечатування та захисту упаковки. Термопакувальники можуть використовувати різноманітні технології, такі як термічне притискання, термозварювання, термоформування тощо. У нашому випадку, Термопакувальник "Альфа" призначений для швидкого та ефективного термічного упаковування продуктів чи матеріалів у компактний та безпечний спосіб.
+                    p.questions-card__descr ЕКО ТМ є виробником високотехнологічного обладнання для паперово-картонного виробництва. Ми спрямовані на надання інноваційних рішень для оптимізації виробничих процесів та підвищення продуктивності. Наша місія - сприяти сталому виробництву, забезпечуючи високу якість та конкурентоспроможність наших клієнтів.
             .questions-card 
                 button.questions-card__title Що таке термопакувальник?
                 .questions-card__descr-container
@@ -15,24 +15,20 @@ section.questions
             .questions-card 
                 button.questions-card__title Які матеріали можна використовувати з Термопакувальником "Альфа"?
                 .questions-card__descr-container
-                    p.questions-card__descr Термопакувальник - це пристрій, який використовує теплову енергію для упаковки матеріалів чи продуктів. В основному, це використовується для формування, запечатування та захисту упаковки. Термопакувальники можуть використовувати різноманітні технології, такі як термічне притискання, термозварювання, термоформування тощо. У нашому випадку, Термопакувальник "Альфа" призначений для швидкого та ефективного термічного упаковування продуктів чи матеріалів у компактний та безпечний спосіб.
-            .questions-card 
-                button.questions-card__title Чи складно налаштовувати та використовувати Термопакувальник "Альфа"?
-                .questions-card__descr-container
-                    p.questions-card__descr Термопакувальник - це пристрій, який використовує теплову енергію для упаковки матеріалів чи продуктів. В основному, це використовується для формування, запечатування та захисту упаковки. Термопакувальники можуть використовувати різноманітні технології, такі як термічне притискання, термозварювання, термоформування тощо. У нашому випадку, Термопакувальник "Альфа" призначений для швидкого та ефективного термічного упаковування продуктів чи матеріалів у компактний та безпечний спосіб.
+                    p.questions-card__descr Термопакувальник "Альфа" призначений для використання з широким спектром екологічно чистих упаковочних матеріалів. До рекомендованих матеріалів входять вторинні паперові та картонні вироби, біорозкладні полімери, а також екологічно безпечні альтернативи плівковим матеріалам. Застосування цих матеріалів дозволяє досягти високого рівня ефективності упаковки, зменшити вплив на навколишнє середовище та відповідати сучасним стандартам сталого розвитку.
             .questions-card 
                 button.questions-card__title Яка є різниця між Термопакувальником "Альфа" та іншими аналогічними пристроями на ринку?
                 .questions-card__descr-container
-                    p.questions-card__descr Термопакувальник - це пристрій, який використовує теплову енергію для упаковки матеріалів чи продуктів. В основному, це використовується для формування, запечатування та захисту упаковки. Термопакувальники можуть використовувати різноманітні технології, такі як термічне притискання, термозварювання, термоформування тощо. У нашому випадку, Термопакувальник "Альфа" призначений для швидкого та ефективного термічного упаковування продуктів чи матеріалів у компактний та безпечний спосіб.
-            .questions-card 
-                button.questions-card__title Яка є різниця між Термопакувальником "Альфа" та іншими аналогічними пристроями на ринку?
-                .questions-card__descr-container
-                    p.questions-card__descr Термопакувальник - це пристрій, який використовує теплову енергію для упаковки матеріалів чи продуктів. В основному, це використовується для формування, запечатування та захисту упаковки. Термопакувальники можуть використовувати різноманітні технології, такі як термічне притискання, термозварювання, термоформування тощо. У нашому випадку, Термопакувальник "Альфа" призначений для швидкого та ефективного термічного упаковування продуктів чи матеріалів у компактний та безпечний спосіб.
+                    p.questions-card__descr Термопакувальник "Альфа" відрізняється від інших звичайних термопакувальників на ринку через свою унікальну екологічну спрямованість. "Альфа" розроблений з врахуванням високих стандартів екологічної відповідальності, використовуючи тільки екологічно чисті матеріали та технології. Відмінною особливістю є його здатність ефективно працювати з екологічно безпечними упаковочними матеріалами, сприяючи зменшенню впливу на навколишнє середовище та відповідності сучасним стандартам сталого розвитку.
             .questions-card 
                 button.questions-card__title Чи можна користуватися Термопакувальником "Альфа" для упаковки продуктів з різними формами та розмірами?
                 .questions-card__descr-container
-                    p.questions-card__descr Термопакувальник - це пристрій, який використовує теплову енергію для упаковки матеріалів чи продуктів. В основному, це використовується для формування, запечатування та захисту упаковки. Термопакувальники можуть використовувати різноманітні технології, такі як термічне притискання, термозварювання, термоформування тощо. У нашому випадку, Термопакувальник "Альфа" призначений для швидкого та ефективного термічного упаковування продуктів чи матеріалів у компактний та безпечний спосіб.
+                    p.questions-card__descr Термопакувальник "Альфа" володіє гнучкістю та адаптивністю до продуктів різних форм і розмірів. Його конструкція дозволяє ефективно упаковувати продукти з різноманітними параметрами. Незважаючи на обмежені розміри термопакувальника (40x33x23 см), його проект передбачає оптимальне використання простору, забезпечуючи можливість упаковки різноманітних продуктів з урахуванням їхніх конкретних характеристик.
             .questions-card 
                 button.questions-card__title Які переваги отримає мій бізнес використовуючи Термопакувальник "Альфа" в порівнянні з іншими методами упаковки?
                 .questions-card__descr-container
-                    p.questions-card__descr Термопакувальник - це пристрій, який використовує теплову енергію для упаковки матеріалів чи продуктів. В основному, це використовується для формування, запечатування та захисту упаковки. Термопакувальники можуть використовувати різноманітні технології, такі як термічне притискання, термозварювання, термоформування тощо. У нашому випадку, Термопакувальник "Альфа" призначений для швидкого та ефективного термічного упаковування продуктів чи матеріалів у компактний та безпечний спосіб.
+                    p.questions-card__descr Використання Термопакувальника "Альфа" надасть вашому бізнесу значні конкурентні переваги порівняно з іншими методами упаковки. Його передова екологічна технологія, спрямована на використання екологічно чистих матеріалів, дозволить вам відповісти на ростучі вимоги сталого розвитку. Крім того, гнучкість та адаптивність "Альфа" до різних типів продуктів забезпечать ефективне вирішення упаковочних завдань, що призведе до оптимізації процесів та підвищення ефективності вашого виробництва.
+            .questions-card 
+                button.questions-card__title Які умови співпраці?
+                .questions-card__descr-container
+                    p.questions-card__descr Умови співпраці включають придбання на умовах купівлі-продажу, оренду та лізинг з правом викупу.
