--- a/src/pug/includes/footer.pug
+++ b/src/pug/includes/footer.pug
@@ -18,12 +18,12 @@ footer.footer
               +svg('telegram')
         .footer-links 
           a(href="#") Головна
-          a(href="/#about") Про продукт
-          a(href="/#about") Інновації
-          a(href="/#numbers") Опис
-          a(href="/#guestions") FAQ
-          a(href="/#documents") Документи
-          a(href="/#development-video") Відео
+          a(href="index.html#about") Про продукт
+          a(href="index.html#about") Інновації
+          a(href="index.html#numbers") Опис
+          a(href="index.html#questions") FAQ
+          a(href="index.html#documents") Документи
+          a(href="index.html#development-video") Відео
         .footer-up 
           a(href="#")
             +svg ('arrow-top')
