--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -12,15 +12,15 @@ header.header
                         li.menu-item 
                             a(href="index.html").menu-link Головна
                         li.menu-item
-                            a(href="/#location").menu-link Про продукт
+                            a(href="index.html#about").menu-link Про продукт
                         li.menu-item
-                            a(href="#home").menu-link Інновації
+                            a(href="index.html#about").menu-link Інновації
                         li.menu-item 
-                            a(href="#home").menu-link Опис
+                            a(href="index.html#numbers").menu-link Опис
                         li.menu-item
-                            a(href="/#details-main").menu-link FAQ
+                            a(href="index.html#questions").menu-link FAQ
                         li.menu-item 
-                            a(href="/#conditions").menu-link Документи
+                            a(href="index.html#documents").menu-link Документи
         .header__center 
             a(href='index.html').header__link
                 +svg('logo').header-logo__svg
