--- a/src/pug/includes/homepage/documents.pug
+++ b/src/pug/includes/homepage/documents.pug
@@ -1,4 +1,4 @@
-section.documents 
+section#documents.documents 
     .documents-container.container  
         .documents-top 
             h3.documents-title(data-animated-title) Документи
