--- a/src/pug/includes/homepage/questions.pug
+++ b/src/pug/includes/homepage/questions.pug
@@ -1,4 +1,4 @@
-section.questions 
+section#questions.questions
     .questions-container.container  
         .questions-top 
             h3.questions-title(data-animated-title) FAQ
