--- a/src/assets/styles/pages/questions.scss
+++ b/src/assets/styles/pages/questions.scss
@@ -1,198 +1,218 @@
 .questions {
-    padding-top: 50px;
+  padding-top: 50px;
 
+  position: relative;
+
+  &-container {
+  }
+
+  &-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 30px;
+
+    @include tabletLarge {
+      margin-bottom: 20px;
+    }
+
+    @include tablet {
+      margin-bottom: 15px;
+    }
+  }
+
+  &-title {
+    font-family: $default-font;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 72px;
+    line-height: 120%;
+    text-transform: uppercase;
+    color: $mc1;
+
+    @include tabletLarge {
+      font-size: 54px;
+    }
+
+    @include tablet {
+      font-size: 44px;
+    }
+
+    @include mobile {
+      font-size: 36px;
+    }
+  }
+
+  &-list {
     position: relative;
+  }
 
-   
-    &-container {
+  &-img {
+    position: absolute;
+    right: 11px;
+    top: 0;
+    transform: translateY(-100%);
+    width: 286px;
 
+    @include tabletLarge {
+      width: 168px;
+    }
+  }
+
+  &-card {
+    border: 2px solid $grey;
+    border-radius: 20px;
+    padding: 30px 50px;
+    margin-bottom: 20px;
+
+    @include tabletLarge {
+      padding: 20px 30px;
     }
 
-    &-top {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 30px;
-
-        @include tabletLarge {
-            margin-bottom: 20px;
-        }
-
-        @include tablet {
-            margin-bottom: 15px;
-        }
-
+    @include tablet {
+      padding: 20px;
+      margin-bottom: 10px;
     }
 
-    &-title {
-        font-family: $default-font;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 72px;
-        line-height: 120%;
-        text-transform: uppercase;
-        color: $mc1;
-
-        @include tabletLarge {
-            font-size: 54px;
-        }
-
-        @include tablet {
-            font-size: 44px;
-        }
-
-        @include mobile {
-            font-size: 36px;
-        }
-
-
+    &:last-child {
+      margin-bottom: 0;
     }
 
-    &-list {
-        position: relative;
+    &:has(.is-active) {
+      background: $mc1;
 
-    }
-
-    &-img {
-        position: absolute;
-        right: 11px;
-        top: 0;
-        transform: translateY(-100%);
-        width: 286px;
-
-        @include tabletLarge {
-            width: 168px;
-        }
-    }
-
-    &-card {
-        border: 2px solid $grey;
-        border-radius: 20px;
-        padding: 30px 50px;
-        margin-bottom: 20px;
-
-        @include tabletLarge {
-            padding: 20px 30px;
-        }
-
-        @include tablet {
-            padding: 20px;
-            margin-bottom: 10px;
-        }
-
-        &:last-child {
-            margin-bottom: 0;
-        }
-
-    }
-
-    &-card__title {
-        position: relative;
-        font-family: $default-font;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 32px;
-        line-height: 130%;
-        color: $mc1;
-        width: 100%;
-        text-align: left;
-        padding: 0;
-
-        @include tabletLarge {
-            font-size: 24px;
-        }
-
-        @include tablet {
-            font-size: 20px;
-        }
-
-        @include mobile {
-            padding-right: 75px;
-        }
+      .questions-card__title {
+        color: $wc;
 
         &::before {
-            content: '';
-                background-image: url(../images/arrow.svg);
-                width: 25px;
-                height: 25px;
-                background-position: center;
-                background-size: contain;
-                position: absolute;
-                right: 34px;
-                top: 50%;
-                transform: translate(100%, -50%) rotate(-90deg);
-                transition: all 0.4s ease-in-out;  
-                
-                @include tabletLarge {
-                    right: 30px;
-                }
+          content: '';
+          background-image: url(../images/arrow-accordeon-white.svg);
+          width: 25px;
+          height: 25px;
+          background-position: center;
+          background-size: contain;
+          position: absolute;
+          right: 34px;
+          top: 50%;
+          transform: translate(100%, -50%) rotate(90deg);
 
-                @include mobile {
-                    right: 20px;
-                }
+          @include tabletLarge {
+            right: 30px;
+          }
+
+          @include tablet {
+            right: 20px;
+          }
         }
+      }
 
-        &.is-active {
-            &::before {
+      .questions-card__descr {
+        color: $wc;
+      }
+    }
+  }
 
-                content: '';
-                    background-image: url(../images/arrow.svg);
-                    width: 25px;
-                    height: 25px;
-                    background-position: center;
-                    background-size: contain;
-                    position: absolute;
-                    right: 34px;
-                    top: 50%;
-                    transform: translate(100%, -50%) rotate(90deg);
+  &-card__title {
+    position: relative;
+    font-family: $default-font;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 130%;
+    color: $mc1;
+    width: 100%;
+    text-align: left;
+    padding: 0 40px 0 0;
 
-                    @include tabletLarge {
-                        right: 30px;
-                    }
-    
-                    @include tablet {
-                        right: 20px;
-                    }
-            }
-            
-        }
-
+    @include tabletLarge {
+      font-size: 24px;
     }
 
-    &-card__descr-container {
-        max-height: 0;
-        overflow: hidden;
-        transition: max-height 0.5s ease-in-out;
-
-        @include mobile {
-            // padding-top: 5px;
-        }
-
-        &.is-active {
-            height: auto;
-            margin-top: 20px;       
-        }
-
+    @include tablet {
+      font-size: 20px;
     }
 
-    &-card__descr {
-        font-family: $default-font;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 18px;
-        line-height: 150%;
-        color: $mc2;
-        padding-top: 30px;
+    @include mobile {
+      padding-right: 75px;
+    }
+
+    &::before {
+      content: '';
+      background-image: url(../images/arrow-accordeon.svg);
+      width: 25px;
+      height: 25px;
+      background-position: center;
+      background-size: contain;
+      position: absolute;
+      right: 34px;
+      top: 50%;
+      transform: translate(100%, -50%) rotate(-90deg);
+      transition: all 0.4s ease-in-out;
+
+      @include tabletLarge {
+        right: 30px;
+      }
+
+      @include mobile {
+        right: 20px;
+      }
+    }
+
+    &.is-active {
+      &::before {
+        content: '';
+        background-image: url(../images/arrow-accordeon.svg);
+        width: 25px;
+        height: 25px;
+        background-position: center;
+        background-size: contain;
+        position: absolute;
+        right: 34px;
+        top: 50%;
+        transform: translate(100%, -50%) rotate(90deg);
 
         @include tabletLarge {
-            font-size: 16px;
+          right: 30px;
         }
 
         @include tablet {
-            font-size: 14px;
-            padding-top: 10px;
+          right: 20px;
         }
-
-
+      }
     }
+  }
+
+  &-card__descr-container {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s ease-in-out;
+
+    @include mobile {
+      // padding-top: 5px;
+    }
+
+    &.is-active {
+      height: auto;
+      margin-top: 20px;
+    }
+  }
+
+  &-card__descr {
+    font-family: $default-font;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 150%;
+    color: $mc2;
+    padding-top: 30px;
+
+    @include tabletLarge {
+      font-size: 16px;
+    }
+
+    @include tablet {
+      font-size: 14px;
+      padding-top: 10px;
+    }
+  }
 }
