--- a/src/pug/includes/footer.pug
+++ b/src/pug/includes/footer.pug
@@ -1,4 +1,4 @@
-footer.footer
+footer.footer#footer
   .footer-bottom
     .footer-bottom__inner.container
       .footer-bottom-block
@@ -10,10 +10,6 @@ footer.footer
           .footer-social
             a(href='fb').footer-social-link.social-fb
               +svg('fb')
-            a(href='instagram').footer-social-link.social-instagram
-              +svg('instagram')
-            a(href='fb').footer-social-link.social-youtube
-              +svg('youtube')
             a(href='fb').footer-social-link.social-telegram
               +svg('telegram')
         .footer-links 
