--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -30,6 +30,6 @@ header.header
             //-     a(href='/ua').main-bottom__langs-switch UA
             //-     a(href='/ru').main-bottom__langs-switch.active EN
             .standard-btn.header-btn
-                a(href="#").btn-link Співпрацювати
+                a(href="#footer").btn-link Співпрацювати
 
             
