--- a/src/pug/includes/homepage/documents.pug
+++ b/src/pug/includes/homepage/documents.pug
@@ -3,7 +3,7 @@ section#documents.documents
         .documents-top 
             h3.documents-title(data-animated-title) Документи
         .documents-list
-            a(href="#" target="_blank").documents-card
+            a(href="assets/images/patent.jpg" download target="_blank").documents-card
                 .documents-card-text 
                     span.documents-card__title Патент
                     .documents-card__svg
