--- a/src/pug/includes/homepage/intro.pug
+++ b/src/pug/includes/homepage/intro.pug
@@ -5,6 +5,8 @@ section.intro
         .intro-inner__text
             h1.intro-inner__text-title(data-animated-title) Термопакувальник
             p.intro-inner__text-description «Відкрийте новий рівень упаковки з нашим Термопакувальником "Альфа". Забезпечте ефективність та точність упаковки за допомогою передових технологій.»
-            //- .intro-down 
-            //-     a(href="#")
-            //-         +svg ('arrow')
+            .intro-down 
+                a(href="#")
+                    +svg ('arrow')
+    .intro-inner__video
+        video(src="assets/images/video/hero.mp4" poster="assets/images/poster2.jpg" width="100%" height="100%" controls="true" loop playsinline)         
