--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -54,6 +54,12 @@
         border-radius: 15px;
       }
 
+      @include mobile {
+        margin-left: 0;
+        font-size: 14px;
+        width: 160px;
+      }
+
       &:hover {
         border: 1px solid #86c8bc;
       }
@@ -107,23 +113,20 @@
     @include mobile {
       order: 1;
       width: fit-content;
-
     }
   }
 
   &-logo__svg {
     height: 110px;
-    
+
     transition: all 0.3s ease-in-out;
     @include tabletLarge {
       height: 90px;
-     
     }
 
     @include mobile {
       height: 60px;
       width: 80px;
-      
     }
   }
 
@@ -247,10 +250,9 @@
 
   .header__link > .header-logo__svg {
     height: 80px;
-   
+
     @include tabletLarge {
       height: 70px;
-     
     }
     @include tablet {
       height: 60px;
@@ -623,46 +625,42 @@
   visibility: visible;
 }
 
-#toggle-menu.on + #menu::after {
-  content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 100%;
-  height: 100vh;
-  width: 60vw;
-  background: rgba(0, 0, 0, 0.4);
-  @include tablet {
-    width: 50vw;
-  }
-  @include mobile {
-    display: none;
-  }
-}
-
 /* menu appearance*/
 #menu {
   position: absolute;
-  width: 40vw;
-  height: calc(100vh - 80px);
-  background-color: $wc;
+  width: calc(100vw - 40px);
+  height: calc(100vh - var(--header-h-top) - 20px);
+  background-color: $mc1;
   display: flex;
   justify-content: space-between;
-  top: 100px;
-  left: 0;
+  border-radius: 20px;
+  left: 20px;
+  bottom: 20px;
+  top: var(--header-h-top);
   border-top: 1px solid rgba(255, 255, 255, 0.3);
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.4s;
-  @include tabletLarge {
-    top: 80px;
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 40%;
+    height: 100%;
+    background: url(../images/model.png) no-repeat center;
+    background-size: cover;
+
+    @include mobile {
+      width: 100%;
+      height: 50%;
+      top: auto;
+      bottom: 0;
+    }
   }
-  @include tablet {
-    top: 80px;
-    width: 50vw;
-  }
+
   @include mobile {
-    width: 100vw;
     z-index: -1;
     height: 100vh;
   }
@@ -680,8 +678,9 @@
   line-height: 1.2;
   letter-spacing: 0.02em;
   text-transform: uppercase;
-  color: $mc1;
+  color: $wc;
   transition: all ease-in-out 0.3s;
+  width: 60%;
 
   @include tabletLarge {
     font-size: 40px;
@@ -693,6 +692,7 @@
 
   @include mobile {
     font-size: 26px;
+    width: 100%;
   }
 }
 
@@ -771,6 +771,7 @@
     }
     @include tablet {
       justify-content: flex-start;
+      text-align: center;
     }
   }
 
