--- a/src/assets/styles/pages/intro.scss
+++ b/src/assets/styles/pages/intro.scss
@@ -1,238 +1,242 @@
 .intro {
+  width: 100%;
+
+  &-container {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-top: var(--header-h-top);
+
+    @include mobile {
+      height: 70vh;
+    }
+  }
+
+  &-inner__img-wrap {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    overflow: hidden;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
+  &-inner__text {
+    position: absolute;
+    bottom: 20px;
+    left: 40px;
+    right: 40px;
+    height: fit-content;
+    max-width: 100%;
+    border-radius: 20px;
+    background: $mc1;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 50px;
+
+    @include tablet {
+      padding: 20px;
+    }
+  }
+
+  &-down {
+    position: relative;
+    z-index: 1000;
+    margin-top: 50px;
+
+    @include tabletLarge {
+      margin-top: 30px;
+    }
+
+    @include tablet {
+      margin-top: 20px;
+    }
+
+    @include mobile {
+      margin-top: 15px;
+    }
+
+    & a {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 64px;
+      height: 64px;
+      border: 1px solid #fff;
+      border-radius: 50%;
+      font-family: $default-font;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 12px;
+      line-height: 120%;
+      letter-spacing: 0.02em;
+      text-transform: uppercase;
+      color: $wc;
+      transition: all ease-in-out 0.3s;
+      @include tablet {
+        width: 45px;
+        height: 45px;
+      }
+      &:hover {
+        background: #86c8bc;
+      }
+    }
+
+    svg {
+      stroke: #fff;
+      fill: #fff;
+      transform: rotate(-90deg);
+      width: 40%;
+      height: 40%;
+      -webkit-animation: bounce-2 2s infinite;
+      animation: bounce-2 2s infinite;
+    }
+
+    /* Scroll down indicator (bouncing) */
+    @keyframes bounce-2 {
+      0% {
+        transform: translateY(5px) rotate(-90deg);
+      }
+      50% {
+        transform: translateY(-5px) rotate(-90deg);
+      }
+      100% {
+        transform: translateY(5px) rotate(-90deg);
+      }
+    }
+    @keyframes bounce {
+      0% {
+        -webkit-transform: translateY(5px) rotate(-90deg);
+        -moz-transform: translateY(5px) rotate(-90deg);
+        -ms-transform: translateY(5px) rotate(-90deg);
+        -o-transform: translateY(5px) rotate(-90deg);
+        transform: translateY(5px) rotate(-90deg);
+      }
+      20%,
+      50%,
+      80%,
+      100% {
+        -webkit-transform: translateY(0) rotate(-90deg);
+        -moz-transform: translateY(0) rotate(-90deg);
+        -ms-transform: translateY(0) rotate(-90deg);
+        -o-transform: translateY(0) rotate(-90deg);
+        transform: translateY(0) rotate(-90deg);
+      }
+      40% {
+        -webkit-transform: translateY(-15px) rotate(-90deg);
+        -moz-transform: translateY(-15px) rotate(-90deg);
+        -ms-transform: translateY(-15px) rotate(-90deg);
+        -o-transform: translateY(-15px) rotate(-90deg);
+        transform: translateY(-15px) rotate(-90deg);
+      }
+      60% {
+        -webkit-transform: translateY(-5px) rotate(-90deg);
+        -moz-transform: translateY(-5px) rotate(-90deg);
+        -ms-transform: translateY(-5px) rotate(-90deg);
+        -o-transform: translateY(-5px) rotate(-90deg);
+        transform: translateY(-5px) rotate(-90deg);
+      }
+    }
+  }
+
+  &-inner__text-title {
+    font-family: $default-font;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 82px;
+    line-height: 100%;
+    text-align: left;
+    text-transform: uppercase;
+    color: #fff;
+    position: relative;
+    padding-bottom: 20px;
+
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 1px;
+      background: rgba($color: #fff, $alpha: 0.5);
+    }
+
+    @include tabletLarge {
+      font-size: 72px;
+    }
+
+    @include tablet {
+      font-size: 60px;
+      padding-bottom: 10px;
+    }
+
+    @include mobile {
+      font-size: 20px;
+    }
+  }
+
+  &-inner__text-description {
+    width: 60%;
+    padding-top: 20px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 150%;
+    text-align: center;
+    color: #fff;
+    text-align: left;
+
+    @include tabletLarge {
+      font-size: 20px;
+    }
+
+    @include tablet {
+      font-size: 18px;
+      padding-top: 10px;
+      width: 60%;
+    }
+
+    @include mobile {
+      width: 100%;
+      font-size: 14px;
+    }
+  }
+
+  &-img {
+    position: absolute;
+    bottom: 0;
     width: 100%;
 
-    &-container {
-        width: 100%;
-        height: 100vh;
-        position: relative;
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        padding-top: var(--header-h-top);
+    @include mobile {
+      left: 0;
+      right: 0;
+      margin-right: -20px;
+      margin-left: -20px;
+      width: auto;
+    }
+  }
 
-        
+  &-inner__video {
+    width: 100%;
+    height: 80vh;
+    padding: 50px 20px 0 20px;
 
+    @include mobile {
+      height: 50vh;
     }
 
-    &-inner__img-wrap {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        border-radius: 20px;
-        overflow: hidden;
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-      
-
+    video {
+      object-fit: cover;
+      border-radius: 20px;
     }
-
-    &-inner__text {
-        position: absolute;
-        bottom: 20px;
-        left: 40px;
-        right: 40px;
-        height: fit-content;
-        max-width: 100%;
-        border-radius: 20px;
-        background: $mc1;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        padding: 50px;
-
-    }
-
-    &-down {
-        position: relative;
-        z-index: 1000;  
-        margin-top: 50px;
-
-        @include tabletLarge {
-            margin-top: 30px;
-        }
-
-        @include tablet {
-            margin-top: 20px;
-        }
-        
-        @include mobile {
-            margin-top: 15px;
-        }
-
-        & a {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 64px;
-          height: 64px;
-          border: 2px solid #fff;
-          border-radius: 50%;
-          font-family: $default-font;
-          font-style: normal;
-          font-weight: 500;
-          font-size: 12px;
-          line-height: 120%;
-          letter-spacing: 0.02em;
-          text-transform: uppercase;
-          color: $wc;
-          transition: all ease-in-out 0.3s;
-          @include tablet {
-            width: 45px;
-            height: 45px;
-          }
-          &:hover {
-            color: $mc2;
-          }
-        }
-    
-        & svg {
-            transform: rotate(-90deg);
-            width: 40%;
-            height: 40%;
-            -webkit-animation: bounce-2 2s infinite;
-            animation: bounce-2 2s infinite;
-        }
-        
-        /* Scroll down indicator (bouncing) */
-        @keyframes bounce-2 {
-            0%   { transform: translateY(5px) rotate(-90deg); }
-            50%  { transform: translateY(-5px) rotate(-90deg); }
-            100% { transform: translateY(5px) rotate(-90deg); }
-        }
-        @keyframes bounce {
-            0% {
-                -webkit-transform: translateY(5px) rotate(-90deg);
-                -moz-transform: translateY(5px) rotate(-90deg);
-                -ms-transform: translateY(5px) rotate(-90deg);
-                -o-transform: translateY(5px) rotate(-90deg);
-                transform: translateY(5px) rotate(-90deg); 
-            }
-            20%, 50%, 80%, 100% {
-                -webkit-transform: translateY(0) rotate(-90deg);
-                -moz-transform: translateY(0) rotate(-90deg);
-                -ms-transform: translateY(0) rotate(-90deg);
-                -o-transform: translateY(0) rotate(-90deg);
-                transform: translateY(0) rotate(-90deg); 
-              }
-            40% {
-              -webkit-transform: translateY(-15px) rotate(-90deg);
-              -moz-transform: translateY(-15px) rotate(-90deg);
-              -ms-transform: translateY(-15px) rotate(-90deg);
-              -o-transform: translateY(-15px) rotate(-90deg);
-              transform: translateY(-15px) rotate(-90deg); 
-            }
-            60% {
-              -webkit-transform: translateY(-5px) rotate(-90deg);
-              -moz-transform: translateY(-5px) rotate(-90deg);
-              -ms-transform: translateY(-5px) rotate(-90deg);
-              -o-transform: translateY(-5px) rotate(-90deg);
-              transform: translateY(-5px) rotate(-90deg); 
-            } 
-        }
-      }
-
-    &-inner__text-title {
-        font-family: $default-font;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 82px;
-        line-height: 100%;
-        text-align: left;
-        text-transform: uppercase;
-        color: #fff;
-        position: relative;
-        padding-bottom: 20px;
-
-        &::after {
-            content: '';
-            display: block;
-            position: absolute;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-            height: 1px;
-            background: rgba($color: #fff, $alpha: 0.5);
-        }
-
-        @include tabletLarge {
-            font-size: 72px;
-        }
-
-        @include tablet {
-            font-size: 60px;
-            padding-bottom: 10px;
-        }
-        
-        @include mobile {
-            font-size: 36px;
-        }
-
-    }
-
-    &-inner__text-description {
-        width: 60%;
-        padding-top: 20px;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 24px;
-        line-height: 150%;
-        text-align: center;
-        color: #fff;
-        text-align: left;
-
-        @include tabletLarge {
-            font-size: 20px;
-        }
-
-        @include tablet {
-            font-size: 18px;
-            padding-top: 10px;
-            width: 60%;
-        }
-        
-
-        @include mobile {
-            width: 100%;
-            font-size: 14px;  
-        }
-
-    }
-
-    &-img {
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-
-        @include mobile { 
-            left: 0;
-            right: 0;
-            margin-right: -20px;
-            margin-left: -20px;
-            width: auto;
-        }
-    }
-
-    &-inner__video {
-        width: 100%;
-        height: 80vh;
-
-        @include mobile { 
-            position: absolute;
-            bottom: 0;
-            left: 50%;
-            transform: translate(-50%, 50%);
-            height: 180px;
-            padding-left: 15px;
-            padding-right: 15px;
-        }
-
-        iframe {
-            object-fit: cover;
-            border-radius: 20px;
-        }
-
-    }
+  }
 }
