--- a/src/pug/includes/homepage/numbers.pug
+++ b/src/pug/includes/homepage/numbers.pug
@@ -17,8 +17,10 @@ section#numbers.numbers
                 img(src="assets/images/blobs4.png", alt="").numbers-img--middle
             .numbers-card.numbers-card--large-text 
                 p.numbers-card__descr Термопакувальник "Альфа" - ідеальне поєднання стилю та ефективності. Захищає ваші улюблені продукти, зберігаючи їхню свіжість та привабливий вигляд. Його екологічність робить його вибором, який дбає про навколишнє середовище, даруючи при цьому комфорт та стиль вашим покупкам.
-                a(href="#").numbers-btn Співпрацювати
+                a(href="#footer").numbers-btn Співпрацювати
             .numbers-card.numbers-card--colored
                 h4.numbers-card__title(data-animated-title) 220В <br> 50Гц <br> 200Вт
                 p.numbers-card__descr Потужність
                 img(src="assets/images/blobs5.png", alt="").numbers-img--last
+    .intro-inner__video
+        video(src="assets/images/video/video.MOV" poster="assets/images/poster1.jpg" width="100%" height="100%" controls="true" loop playsinline)
