--- a/src/pug/includes/homepage/numbers.pug
+++ b/src/pug/includes/homepage/numbers.pug
@@ -23,4 +23,4 @@ section#numbers.numbers
                 p.numbers-card__descr Потужність
                 img(src="assets/images/blobs5.png", alt="").numbers-img--last
     .intro-inner__video
-        video(src="assets/images/video/video.MOV" poster="assets/images/poster1.jpg" width="100%" height="100%" controls="true" loop playsinline)
+        video(src="assets/images/video/hero.mp4" poster="assets/images/poster1.jpg" width="100%" height="100%" controls="true" loop playsinline)
